aligned items to center for sidebar sub-grid-items, fixed article layout and added some styling to card

--- a/03-grid-layout-3/style.css
+++ b/03-grid-layout-3/style.css
@@ -114,7 +114,7 @@ body {
   display: grid;
   gap: 4px;
 
-  grid-template-rows: 2fr 1fr 6fr 1fr;
+  grid-template-rows: 2fr 1fr 16fr 1fr;
   grid-template-columns: 1fr 4fr;
 }
 
@@ -162,6 +162,12 @@ body {
   grid-template-rows: repeat(4, minmax(20px, 1fr));
 }
 
+.side-content, 
+.photo {
+  display: grid;
+  align-items: center;
+}
+
 
 /* Nav Section */
 
@@ -180,8 +186,20 @@ body {
 
 .article {
   grid-area: 3 / 2 / 4 / 3;
+
+  display: grid;
+  gap: 15px;
+
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
+.card {
+  height: 200px;
+}
+
+.card > p {
+  padding: 5px;
+}
 
 /* Footer Section */
 
